# not-rocketscience

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup.sh
doc/source/: conf.py  index.rst  modules.rst
docs/: .buildinfo  genindex.html  index.html  modules.html  not_rocketscience.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: not_rocketscience.rst.txt
docs/_static/: custom.css
run/: config.py  gravity.ipynb  gravity_demo.py  planet_animation.py  planet_test.py  presentation.ipynb  rise.css  rotate_spaceship.py  run_main.py  star_background_experiments.py  tiling.ipynb  very_basic.py
src/not_rocketscience/: __init__.py  background.py  config.py  config.yaml  framework.py  hud.py  main.py  math.py  objects.py  planets.py  ship.py
